add d+ ids from s12

--- a/episodes/season_12.yml
+++ b/episodes/season_12.yml
@@ -6,7 +6,7 @@ episodes:
   description: On Halloween... a deceased Homer must perform one good deed to get
     into heaven; angry dolphins launch an attack against the people of Springfield;
     Bart and Lisa encounter characters from fairy tales.
-  disneyplus_id:
+  disneyplus_id: 8f3f2a60-3741-426f-bbc6-b303d1b0adbe
   simpsonsworld_id: 294765123660
   good: false
   characters:
@@ -16,7 +16,7 @@ episodes:
   episode: 2
   description: The townspeople of Springfield divide into two communities when the
     telephone company institutes a new area code system.
-  disneyplus_id:
+  disneyplus_id: 973def57-0286-420b-b379-29506579cbe4
   simpsonsworld_id: 300911171880
   good: true
   characters:
@@ -26,7 +26,7 @@ episodes:
   episode: 3
   description: Krusty discovers that he fathered a child during the Gulf War... only
     to gamble away his daughter's precious violin during a poker game with Fat Tony.
-  disneyplus_id:
+  disneyplus_id: 3c4f7bf2-c2cc-433c-84a9-2e7b4a8b355f
   simpsonsworld_id: 306934851515
   good: false
   characters:
@@ -36,7 +36,7 @@ episodes:
   episode: 4
   description: Lisa joins a group of eco-radicals in her attempt to save the city's
     oldest redwood tree.
-  disneyplus_id:
+  disneyplus_id: 8db238bc-3261-4cfa-9f84-ef56b0320417
   simpsonsworld_id: 306939971530
   good: false
   characters:
@@ -46,7 +46,7 @@ episodes:
   episode: 5
   description: As the Thanksgiving holiday approaches, Mr. Burns hires Homer to be
     his 'prank monkey.'
-  disneyplus_id:
+  disneyplus_id: e1571405-1efa-4e78-8534-210ef3adbfc6
   simpsonsworld_id: 311670339999
   good: false
   characters:
@@ -57,7 +57,7 @@ episodes:
   episode: 6
   description: Homer uses his new computer to spread gossip on the Internet... and
     eventually finds himself stranded on a mysterious island.
-  disneyplus_id:
+  disneyplus_id: b4a7b686-0418-41a5-94f7-b4fe410d2e5c
   simpsonsworld_id: 302843971598
   good: false
   characters:
@@ -67,7 +67,7 @@ episodes:
   episode: 7
   description: Homer and Bart become scam artists when the family is faced with the
     cost of a sudden car repair.
-  disneyplus_id:
+  disneyplus_id: fc3fe593-1586-446b-82fc-a89e0d51b78f
   simpsonsworld_id: 304456259863
   good: true
   characters:
@@ -79,7 +79,7 @@ episodes:
   description: As Christmas approaches, a winter snowstorm traps Bart, Lisa and their
     fellow students inside Springfield Elementary, where Principal Skinner attempts
     to keep chaos from erupting.
-  disneyplus_id:
+  disneyplus_id: 98ea336b-b2ac-4bcc-b11f-4ca5560b3003
   simpsonsworld_id: 307850819951
   good: false
   characters:
@@ -91,7 +91,7 @@ episodes:
   episode: 9
   description: Homer experiences a dramatic increase in intelligence when researchers
     remove a crayon lodged in his brain.
-  disneyplus_id:
+  disneyplus_id: 3111dfd2-62e7-4dc5-8448-c37e5e95ef3c
   simpsonsworld_id: 306945603638
   good: true
   characters:
@@ -103,7 +103,7 @@ episodes:
   description: With Marge's help, an inmate with artistic ability is paroled from
     prison.  But when the ex-con gets a job painting a mural at the elementary school,
     he clashes with Skinner.
-  disneyplus_id:
+  disneyplus_id: 5a0e6628-e826-4c6c-9222-a717473fba86
   simpsonsworld_id: 302844995961
   good: false
   characters:
@@ -114,7 +114,7 @@ episodes:
   episode: 11
   description: When the Comic Book Guy suffers a heart attack, Bart and Milhouse take
     over his store.
-  disneyplus_id:
+  disneyplus_id: 1c2d1dbd-7ad5-46ba-b759-e07400b4fc1c
   simpsonsworld_id: 310459971509
   good: true
   characters:
@@ -126,7 +126,7 @@ episodes:
   episode: 12
   description: When the Simpsons construct a tennis court in the backyard, Bart pairs
     up with Marge and becomes a tennis whiz... much to Homer's disappointment.
-  disneyplus_id:
+  disneyplus_id: b0c9ae03-7a23-4337-a425-bf5dd96516ef
   simpsonsworld_id: 300916291603
   good: false
   characters:
@@ -138,7 +138,7 @@ episodes:
   episode: 13
   description: Sideshow Bob wins release from prison and hypnotizes Bart to kill Krusty
     the Clown.
-  disneyplus_id:
+  disneyplus_id: 9c3e929b-c242-4de5-affc-5a826fe18dcd
   simpsonsworld_id: 307106883649
   good: false
   characters:
@@ -150,7 +150,7 @@ episodes:
   episode: 14
   description: After casting Bart and his friends as singers in an all-boy band, a
     crazed record producer launches an attack on the offices of MAD magazine.
-  disneyplus_id:
+  disneyplus_id: 89cbf06d-f2ba-463e-9644-88c129108846
   simpsonsworld_id: 310437443723
   good: true
   characters:
@@ -160,7 +160,7 @@ episodes:
   episode: 15
   description: Homer goes on a hunger strike after learning that the owner of the
     Springfield Isotopes plans on moving the team to Albuquerque.
-  disneyplus_id:
+  disneyplus_id: 238de1c0-2a47-4ffb-8e04-18dc8a038587
   simpsonsworld_id: 307850819931
   good: true
   characters:
@@ -170,7 +170,7 @@ episodes:
   episode: 16
   description: Lisa searches for answers when a new student at school bullies her;
     Homer starts his own baby-proofing business.
-  disneyplus_id:
+  disneyplus_id: a1c87fe2-c9a6-4eed-bc9a-bd2960eb1580
   simpsonsworld_id: 302846019892
   good: false
   characters:
@@ -181,7 +181,7 @@ episodes:
   episode: 17
   description: The Simpsons journey through Africa, where they encounter jungle animals,
     tribesmen... and a chimp refuge owner with a secret.
-  disneyplus_id:
+  disneyplus_id: 4e1b6c0d-3e34-47ca-97ca-1a70ec60df00
   simpsonsworld_id: 302845507908
   good: false
   characters:
@@ -192,7 +192,7 @@ episodes:
   description: 'A day in the life of the Simpsons replays three times: Homer panics
     when Marge slices off his thumb; Lisa attempts to place her entry in the school
     science fair; Bart is pursued by gangsters.'
-  disneyplus_id:
+  disneyplus_id: 0cb770ac-cb53-4d54-a068-c5c4e0375eed
   simpsonsworld_id: 302842947994
   good: false
   characters:
@@ -204,7 +204,7 @@ episodes:
   description: To fulfill his dead wife's final wish, Ned Flanders converts an old,
     closed amusement park into a new Christian amusement park, 'Praiseland.'  The
     park flops until visitors begin having 'visions.'
-  disneyplus_id:
+  disneyplus_id: 531b8ed5-1190-4ec8-8ed8-dab058e10a59
   simpsonsworld_id: 302848579632
   good: true
   characters:
@@ -215,7 +215,7 @@ episodes:
   description: After Homer injures his knee, he's housebound for recuperation.  A
     successful stint as a babysitter prompts Homer to open a full-time daycare service,
     leaving Bart and Lisa feeling neglected.
-  disneyplus_id:
+  disneyplus_id: 291d7d5a-edda-40ea-a149-75bf98b7b7e6
   simpsonsworld_id: 301652547508
   good: false
   characters:
@@ -225,7 +225,7 @@ episodes:
   episode: 21
   description: The Simpsons jump a train, and meet a hobo, who tells them twisted
     versions of three classic tales, all of which feature Simpsons characters.
-  disneyplus_id:
+  disneyplus_id: be38a176-f5fe-4e51-b91b-192b05534acc
   simpsonsworld_id: 301685315594
   good: false
   characters:
