--- a/episodes/season_13.yml
+++ b/episodes/season_13.yml
@@ -6,7 +6,7 @@ episodes:
   description: On Halloween, the Simpsons are menaced by a computer controlling an
     automated house; a gypsy curses Homer; Lisa and Bart find themselves in a Harry
     Potter-like adventure.
-  disneyplus_id:
+  disneyplus_id: 49a883f7-1af9-43fd-a5ea-21d9336cae3a
   simpsonsworld_id: 307115075729
   good: false
   characters:
@@ -17,7 +17,7 @@ episodes:
   description: A stern judge rules that Homer and Bart are to be tethered together,
     and later, Homer and Marge are declared bad parents and placed in old-fashioned
     wooden stocks.
-  disneyplus_id:
+  disneyplus_id: 27398ce7-345a-47bf-a24a-92495aefdf61
   simpsonsworld_id: 307116099877
   good: false
   characters:
@@ -26,7 +26,7 @@ episodes:
   episode: 3
   description: Moe turns the bar into a pretentious hang-out for Springfield's 'beautiful
     people,' forcing Homer to start a bar of his own inside his garage.
-  disneyplus_id:
+  disneyplus_id: 7aa1e458-2d84-462b-944e-fdea6ba7d0c9
   simpsonsworld_id: 300917827935
   good: false
   characters:
@@ -37,7 +37,7 @@ episodes:
   episode: 4
   description: When Mr. Burns falls for an attractive traffic cop many years his junior,
     he enlists Homer's help in romancing her.
-  disneyplus_id:
+  disneyplus_id: 615f5d50-9053-4a52-9d28-7ee007c4fd6f
   simpsonsworld_id: 301344323882
   good: false
   characters:
@@ -48,7 +48,7 @@ episodes:
   episode: 5
   description: When placed under hypnosis, Homer struggles with a repressed memory-which
     leads to a shocking discovery.
-  disneyplus_id:
+  disneyplus_id: b3a80310-5278-48b4-bcdf-7640e6ef6d76
   simpsonsworld_id: 302898755902
   good: false
   characters:
@@ -58,7 +58,7 @@ episodes:
   episode: 6
   description: As Christmas approaches... Lisa searches for a new religion after Mr.
     Burns takes over her church and runs it like a corporation.
-  disneyplus_id:
+  disneyplus_id: 1e576683-d666-4616-ade0-e434176e3d27
   simpsonsworld_id: 288120899968
   good: true
   characters:
@@ -68,7 +68,7 @@ episodes:
   episode: 7
   description: A social worker attempts to transform the family into a functional,
     cooperative unit... until Homer's other wife shows up unexpectedly.
-  disneyplus_id:
+  disneyplus_id: 6d9cec94-bed0-4dba-8171-af100d77e381
   simpsonsworld_id: 283083843778
   good: false
   characters:
@@ -79,7 +79,7 @@ episodes:
   episode: 8
   description: After Springfield wins the title of World's Fattest Town, Marge launches
     an anti-sugar crusade, and sugar is banned from the city.
-  disneyplus_id:
+  disneyplus_id: 065b54df-f644-47c3-a829-38392e7d5a42
   simpsonsworld_id: 302893635523
   good: false
   characters:
@@ -89,7 +89,7 @@ episodes:
   episode: 9
   description: When Homer has to have his jaw wired shut, he discovers the joys of
     listening, but Marge finds that a well-behaved Homer isn't what she really wanted.
-  disneyplus_id:
+  disneyplus_id: cebdc2b8-429b-450f-ad2a-3d9f892c9a7a
   simpsonsworld_id: 310440003514
   good: true
   characters:
@@ -101,7 +101,7 @@ episodes:
   description: Marge's ex-boyfriend, now one of the world's richest men, offers Homer
     a million dollars in exchange for a weekend with her, to see what 'might have
     been.'
-  disneyplus_id:
+  disneyplus_id: cae89847-9de4-454f-9df4-8f90066e1424
   simpsonsworld_id: 301684803770
   good: false
   characters:
@@ -112,7 +112,7 @@ episodes:
   episode: 11
   description: Bart travels to Canada to win back the heart of Rainier Wolfcastle's
     daughter after she runs off with Milhouse.
-  disneyplus_id:
+  disneyplus_id: ab9a7c27-a859-433d-9cae-ee11d5561f5a
   simpsonsworld_id: 307122755675
   good: false
   characters:
@@ -123,7 +123,7 @@ episodes:
   episode: 12
   description: Bart befriends an aging movie cowboy who begins drinking heavily when
     asked to appear on Krusty's television show.
-  disneyplus_id:
+  disneyplus_id: ca10983a-ae5b-4017-86f2-8a869f1224ae
   simpsonsworld_id: 302899267542
   good: false
   characters:
@@ -134,7 +134,7 @@ episodes:
   description: In an effort to win a date with a beautiful new resident at the nursing
     home, Grampa gets his driver's license back... and gives chase when the object
     of his affection leaves for Branson, Missouri.
-  disneyplus_id:
+  disneyplus_id: fae2ffbc-7601-4e73-99a5-6c6309eff0e7
   simpsonsworld_id: 301659203973
   good: false
   characters:
@@ -145,7 +145,7 @@ episodes:
   description: 'The Simpsons appear as characters in three classic tales: Homer as
     Odysseus leads the Greek army; Bart as Hamlet attempts to avenge the death of
     his father; Lisa as Joan of Arc pits the French against the English.'
-  disneyplus_id:
+  disneyplus_id: 257a9640-b5af-4e20-a4f7-9e1d06b89186
   simpsonsworld_id: 310411843752
   good: false
   characters:
@@ -155,7 +155,7 @@ episodes:
   episode: 15
   description: When the Simpsons fly to Brazil to locate a missing orphan that Lisa
     has been sponsoring, Homer ends up getting kidnapped.
-  disneyplus_id:
+  disneyplus_id: 81943c2d-1289-4956-b555-83e291444b74
   simpsonsworld_id: 301665347899
   good: false
   characters:
@@ -166,7 +166,7 @@ episodes:
   description: When Homer is attacked by crows, he's prescribed medical marijuana
     to help relieve the pain... leading Burns to promote his happy employee to executive
     vice president of the power plant.
-  disneyplus_id:
+  disneyplus_id: fc64fc9f-5e54-4857-9743-ef54e7202c2e
   simpsonsworld_id: 310448195762
   good: true
   characters:
@@ -178,7 +178,7 @@ episodes:
   description: Homer is roasted at the Springfield Friar's Club, leading to recollections
     from the past.  But the fate of the Earth hangs in the balance when aliens Kang
     and Kodos make an unexpected appearance.
-  disneyplus_id:
+  disneyplus_id: 5b59b6e8-ebf3-48ce-b68f-43760f567b85
   simpsonsworld_id: 302888515845
   good: false
   characters:
@@ -188,7 +188,7 @@ episodes:
   episode: 18
   description: Bart launches a comic book with an angry Homer as the main character,
     and when it proves a huge success, Homer vows to give up getting angry for Lent.
-  disneyplus_id:
+  disneyplus_id: fe5e230c-1c35-4b6d-bf16-5aa29d39a7f3
   simpsonsworld_id: 302883907921
   good: true
   characters:
@@ -199,7 +199,7 @@ episodes:
   episode: 19
   description: When Manjula kicks Apu out of the house for cheating on her, Homer
     and Marge search for a way to reunite the couple.
-  disneyplus_id:
+  disneyplus_id: a5adee2e-50dc-431a-8419-42734f3c1f74
   simpsonsworld_id: 288131139601
   good: false
   characters:
@@ -210,7 +210,7 @@ episodes:
   episode: 20
   description: Lisa is overjoyed when she befriends some college students; Bart becomes
     a boy-in-a-plastic-bubble after he's bitten by a Chinese mosquito.
-  disneyplus_id:
+  disneyplus_id: 9d9a1112-0d2c-47c0-b92c-6fb298dd107d
   simpsonsworld_id: 310416963509
   good: false
   characters:
@@ -220,7 +220,7 @@ episodes:
   episode: 21
   description: Homer and Marge become murder suspects after an elderly shut-in the
     couple befriended is found dead.
-  disneyplus_id:
+  disneyplus_id: 2ade0011-4a83-40a1-b5ff-9b47e3cbe4b3
   simpsonsworld_id: 301664323751
   good: true
   characters:
@@ -231,7 +231,7 @@ episodes:
   episode: 22
   description: When Wiggum and his men prove ineffective in controlling a citywide
     riot, townspeople begin to feel unsafe... until Homer forms his own police force.
-  disneyplus_id:
+  disneyplus_id: 7d8a03ea-c828-488a-ad85-258dd82ce9ca
   simpsonsworld_id: 302880835773
   good: true
   characters:
