--- a/episodes/season_17.yml
+++ b/episodes/season_17.yml
@@ -6,7 +6,7 @@ episodes:
   description: When Homer allows the mob to film a pornographic movie at the house,
     a disgusted Marge leaves the family and hooks up with a doctor trying to save
     the lives of manatees.
-  disneyplus_id:
+  disneyplus_id: 15041ad9-c690-4a1e-819c-5394d01d3896
   simpsonsworld_id: 273502275982
   good: false
   characters:
@@ -17,7 +17,7 @@ episodes:
   episode: 2
   description: Lisa must confront her darkest fears after a cemetery is relocated
     to the Simpsons' neighborhood.
-  disneyplus_id:
+  disneyplus_id: 49f07704-d9ac-47e6-aa12-0a30eaf32f6e
   simpsonsworld_id: 277101123962
   good: false
   characters:
@@ -28,7 +28,7 @@ episodes:
   description: After Kirk and Luann rekindle their relationship, Bart and Milhouse
     plot to end the romance... only to inadvertently cause Homer and Marge to break
     up instead.
-  disneyplus_id:
+  disneyplus_id: 8c265c5a-c1d6-4d41-a16e-2947e666bdd0
   simpsonsworld_id: 273506371834
   good: false
   characters:
@@ -40,7 +40,7 @@ episodes:
   description: On Halloween, Bart is replaced by a robotic boy after he falls into
     a coma; Burns hunts down Homer in a most dangerous game; a witch transforms trick-or-treaters
     into the costumes they're wearing.
-  disneyplus_id:
+  disneyplus_id: 79526359-09da-410f-93ed-473dd8a22d91
   simpsonsworld_id: 310466627927
   good: false
   characters:
@@ -50,7 +50,7 @@ episodes:
   episode: 5
   description: After spending time with her son, Marge begins to worry that she's
     turning Bart into a momma's boy; Homer enters an arm-wrestling competition.
-  disneyplus_id:
+  disneyplus_id: 4f23394a-acfe-44da-9638-6c91de330635
   simpsonsworld_id: 279766083701
   good: false
   characters:
@@ -61,7 +61,7 @@ episodes:
   episode: 6
   description: After winning popularity as the Safety Salamander, Homer challenges
     Quimby during a special mayoral recall election.
-  disneyplus_id:
+  disneyplus_id: e583a0f5-1ec6-430e-aca2-d8872a2a62a7
   simpsonsworld_id: 273512003506
   good: maybe
   characters:
@@ -70,7 +70,7 @@ episodes:
   episode: 7
   description: A lonely Marge joins a women's group; Milhouse teaches Lisa how to
     speak Italian.
-  disneyplus_id:
+  disneyplus_id: b1c183c4-3596-488d-a69f-e009a0b9a052
   simpsonsworld_id: 279770179721
   good: maybe
   characters:
@@ -79,7 +79,7 @@ episodes:
   episode: 8
   description: The Simpsons travel to Italy to retrieve Mr. Burn's expensive new sports
     car... only to encounter Sideshow Bob and his murderous family.
-  disneyplus_id:
+  disneyplus_id: 33c8bd72-9107-4de1-943b-a3e9e4f02fe8
   simpsonsworld_id: 256858691577
   good: maybe
   characters:
@@ -89,7 +89,7 @@ episodes:
   description: 'The Simpsons appear in three Christmas tales: the story of the birth
     of Jesus; a World War II tale featuring Grampa, Mr. Burns and Santa; and a musical
     featuring The Nutcracker suite.'
-  disneyplus_id:
+  disneyplus_id: 69054322-132b-4ec5-b54b-ea7f4bdcc48c
   simpsonsworld_id: 256885315702
   good: maybe
   characters:
@@ -98,7 +98,7 @@ episodes:
   episode: 10
   description: When an old letter is delivered to the Simpson home, Homer comes to
     believe that Grampa isn't his biological father after all.
-  disneyplus_id:
+  disneyplus_id: 5076a95f-afa6-46d1-8e57-91577a8220cf
   simpsonsworld_id: 279775811924
   good: maybe
   characters:
@@ -108,7 +108,7 @@ episodes:
   description: After Bart gets into trouble at school, Homer drives Bart to Oregon,
     where he attends a behavior modification camp; Marge becomes a popular drug dealer
     after she sells Homer's pain medications during a yard sale.
-  disneyplus_id:
+  disneyplus_id: 97ef599a-591e-4b7b-8d45-4dee2571550e
   simpsonsworld_id: 310483523720
   good: maybe
   characters:
@@ -118,7 +118,7 @@ episodes:
   description: Lisa vows to turn Groundskeeper Willie into a 'proper gentleman' in
     time for the upcoming school science fair; Homer tries to find something to wear
     after he rips his favorite blue pants.
-  disneyplus_id:
+  disneyplus_id: 11f3cddd-9bb1-4486-a382-448da80dc063
   simpsonsworld_id: 307171907536
   good: maybe
   characters:
@@ -128,7 +128,7 @@ episodes:
   description: When the Simpsons become trapped inside a cave, Lisa recounts a story
     involving a bag of gold coins and how it affected the lives of Mr. Burns, Moe
     and Homer.
-  disneyplus_id:
+  disneyplus_id: 34ca3fd2-198b-4dbc-a3f0-20813f98d804
   simpsonsworld_id: 277107267767
   good: maybe
   characters:
@@ -137,7 +137,7 @@ episodes:
   episode: 14
   description: Marge teaches Rod and Todd Flanders how to have fun; a lonely chimpanzee
     grabs hold of Bart.
-  disneyplus_id:
+  disneyplus_id: f0ba9823-f753-4fde-b3c3-597e098037c1
   simpsonsworld_id: 277113411511
   good: maybe
   characters:
@@ -146,7 +146,7 @@ episodes:
   episode: 15
   description: Marge swaps places with a British wife after the Simpsons become contestants
     on a reality television show.
-  disneyplus_id:
+  disneyplus_id: c76182bf-8018-4817-bebe-6f6e97fd95c1
   simpsonsworld_id: 277119043544
   good: maybe
   characters:
@@ -155,7 +155,7 @@ episodes:
   episode: 16
   description: After costing Springfield a professional football team, Grampa tries
     to end his life, but the experience changes him, and he ends up becoming a matador.
-  disneyplus_id:
+  disneyplus_id: f06f1cc0-dad5-43ca-95f6-bd312cf3447c
   simpsonsworld_id: 292950083730
   good: maybe
   characters:
@@ -165,7 +165,7 @@ episodes:
   description: Mr. Burns closes the nuclear power plant and outsources all the jobs,
     forcing Homer to relocate to India; MacGyver fans Patty and Selma kidnap actor
     Richard Dean Anderson.
-  disneyplus_id:
+  disneyplus_id: ea476b6b-104d-4b87-b600-104ce3ea2192
   simpsonsworld_id: 283757123904
   good: maybe
   characters:
@@ -174,7 +174,7 @@ episodes:
   episode: 18
   description: 'The Simpsons appear in three stories set at sea: the journey of The
     Mayflower, the mutiny on The Bounty, and the capsizing of a cruise ship.'
-  disneyplus_id:
+  disneyplus_id: 45d552e0-f659-47d7-a211-af7feff50ed0
   simpsonsworld_id: 310489667660
   good: maybe
   characters:
@@ -184,7 +184,7 @@ episodes:
   description: After Skinner is fired for insinuating that girls are inferior to boys
     in math, Springfield Elementary is split into two groups-boys and girls-forcing
     Lisa to dress up like a boy so she can attend a math class.
-  disneyplus_id:
+  disneyplus_id: 5df6d32f-2304-45cd-a197-1d90aa7e1d76
   simpsonsworld_id: 274367043639
   good: maybe
   characters:
@@ -193,7 +193,7 @@ episodes:
   episode: 20
   description: After Marge develops amnesia and can't remember anything about Homer,
     she decides to kick him out of the house and see other people.
-  disneyplus_id:
+  disneyplus_id: 7ebe927e-566b-41b5-9625-ba9600ceb5b5
   simpsonsworld_id: 277125187506
   good: maybe
   characters:
@@ -202,7 +202,7 @@ episodes:
   episode: 21
   description: Lisa protests when Springfield passes a law requiring that creationism
     be taught alongside evolution in public schools.
-  disneyplus_id:
+  disneyplus_id: 8d55f57f-97da-4a15-a0b2-57d6ce59bc29
   simpsonsworld_id: 277127235959
   good: maybe
   characters:
@@ -211,7 +211,7 @@ episodes:
   episode: 22
   description: Homer and Marge play marriage counselors to help a baseball player
     and his sexy recording artist-wife.
-  disneyplus_id:
+  disneyplus_id: 81f1ff3f-741e-4677-9c71-628b4851dbf6
   simpsonsworld_id: 292955203576
   good: false
   characters:
