--- a/episodes/season_18.yml
+++ b/episodes/season_18.yml
@@ -6,7 +6,7 @@ episodes:
   description: Lisa befriends the son of mobster Fat Tony, whose dream is to become
     a chef; Homer and Bart take over the 'family business' after Fat Tony is gunned
     down.
-  disneyplus_id:
+  disneyplus_id: 1783fde5-2f80-47c4-bfd6-f4fa22b5ca1b
   simpsonsworld_id: 292959299559
   good: false
   characters:
@@ -19,7 +19,7 @@ episodes:
   episode: 2
   description: Lisa grows jealous after Bart discovers he's a talented jazz drummer;
     Lisa hides some stray animals in the attic.
-  disneyplus_id:
+  disneyplus_id: ad3773ea-555e-4c7c-ad33-19dd12e2543a
   simpsonsworld_id: 283202115995
   good: false
   characters:
@@ -31,7 +31,7 @@ episodes:
   description: Marge starts her own carpentry business, only to discover that men
     don't trust a woman to do the job; Bart discovers that Skinner is allergic to
     peanuts.
-  disneyplus_id:
+  disneyplus_id: de75d6a6-d9c8-4821-b1c6-d2d7f77adb9f
   simpsonsworld_id: 283760707876
   good: false
   characters:
@@ -45,7 +45,7 @@ episodes:
   description: 'The Simpsons appear in three tales of horror: Homer turns into a rampaging
     blob; a creature from Jewish folklore does Bart''s bidding; a radio broadcast
     convinces townspeople they''re being invaded by aliens.'
-  disneyplus_id:
+  disneyplus_id: 072d998d-45f2-430b-976f-9cdf1d7f0e0f
   simpsonsworld_id: 302871107984
   good: false
   characters:
@@ -56,7 +56,7 @@ episodes:
   description: After Homer joins the Army, he's selected to play an enemy target during
     war games.  When the Army chases Homer into town, it pits the people of Springfield
     against the military.
-  disneyplus_id:
+  disneyplus_id: d506c8e0-838b-42e2-8bc8-639d7ac79093
   simpsonsworld_id: 283080259896
   good: false
   characters:
@@ -66,7 +66,7 @@ episodes:
   episode: 6
   description: Lisa helps Moe get a poem published, but is deeply hurt when Moe refuses
     to acknowledge her contribution.
-  disneyplus_id:
+  disneyplus_id: 1dbc7634-6c9b-451c-b98d-f37a04aca4c3
   simpsonsworld_id: 307167299594
   good: false
   characters:
@@ -77,7 +77,7 @@ episodes:
   episode: 7
   description: Homer finds happiness after he buys an ice cream truck; Marge finds
     her purpose in life when she makes sculptures out of popsicle sticks.
-  disneyplus_id:
+  disneyplus_id: ac78e6e7-e65b-4fdc-a5b1-ca92d60d8f7a
   simpsonsworld_id: 292941379558
   good: maybe
   characters:
@@ -86,7 +86,7 @@ episodes:
   episode: 8
   description: Bart becomes Nelson's best friend; Homer becomes hooked on one of Lisa's
     fantasy books.
-  disneyplus_id:
+  disneyplus_id: cadd74ff-2dff-4715-983d-d725748114ec
   simpsonsworld_id: 279785027791
   good: maybe
   characters:
@@ -95,7 +95,7 @@ episodes:
   episode: 9
   description: During the Christmas holiday, Marge attempts to muster the wherewithal
     to kick down-on-his-luck Gil out of the house.
-  disneyplus_id:
+  disneyplus_id: e23a7a91-620f-43cc-9b61-06fef0de06a9
   simpsonsworld_id: 279793731867
   good: maybe
   characters:
@@ -105,7 +105,7 @@ episodes:
   description: Marge returns to an island where she joyfully spent some of her childhood
     summers; Homer is forced to work on a fishing vessel that's threatened by a huge
     storm.
-  disneyplus_id:
+  disneyplus_id: 68523be0-e230-4d15-8bfa-1f00537ca5b3
   simpsonsworld_id: 283764803572
   good: maybe
   characters:
@@ -115,7 +115,7 @@ episodes:
   description: The Simpsons spin three tales of revenge; Homer appears as the Count
     of Monte Cristo; Milhouse uses a gadget to get even with kids who've picked on
     him; comic hero Bart-Man searches for the villain who killed his parents.
-  disneyplus_id:
+  disneyplus_id: bd3f385d-9260-4ede-8a7a-49406efedb53
   simpsonsworld_id: 283790915851
   good: true
   characters:
@@ -125,7 +125,7 @@ episodes:
   description: As Multicultural Day approaches, Lisa invents her own Native American
     heritage; after saving Springfield from a fire, Bart is rewarded with a driver's
     license-and ends up with a pregnant girlfriend who wants to wed.
-  disneyplus_id:
+  disneyplus_id: cfb599de-f928-47bb-a4fe-26f3675c18e0
   simpsonsworld_id: 310462531619
   good: maybe
   characters:
@@ -135,7 +135,7 @@ episodes:
   description: In this spoof of the 'Up' documentaries, a filmmaker chronicles the
     lives of a group of Springfield residents, including Homer, who has seemingly
     made good on his quest to become a millionaire.
-  disneyplus_id:
+  disneyplus_id: 4949be66-6329-499b-b1fc-a773ba45b1c8
   simpsonsworld_id: 302876739533
   good: maybe
   characters:
@@ -145,7 +145,7 @@ episodes:
   description: Lisa tutors Cletus's children - until Krusty hires them as a novelty
     act for his television show; Bart sees a female therapist after he's caught frightening
     his classmates with a scary story.
-  disneyplus_id:
+  disneyplus_id: a5a3d0fa-49ea-4982-b746-9d62af1e5583
   simpsonsworld_id: 307175491532
   good: maybe
   characters:
@@ -154,7 +154,7 @@ episodes:
   episode: 15
   description: Homer is horrified when his father begins dating Selma; Bart and Lisa
     build a fort after acquiring a large quantity of empty cardboard boxes.
-  disneyplus_id:
+  disneyplus_id: cfbd1344-3525-4ec1-90f2-d29679f8ad4d
   simpsonsworld_id: 302868035943
   good: false
   characters:
@@ -168,7 +168,7 @@ episodes:
   episode: 16
   description: Homer tries his hand at making money by photographing celebrities and
     selling the images to the tabloids.
-  disneyplus_id:
+  disneyplus_id: b5af50a3-1980-4985-a51a-52d70c5e6021
   simpsonsworld_id: 292962371807
   good: false
   characters:
@@ -179,7 +179,7 @@ episodes:
   episode: 17
   description: After discovering the Internet, Marge becomes a character in a popular
     online fantasy game; Homer referees Lisa's soccer team.
-  disneyplus_id:
+  disneyplus_id: 84482308-1ead-4b52-a111-879cf1e310f2
   simpsonsworld_id: 277036099916
   good: maybe
   characters:
@@ -189,7 +189,7 @@ episodes:
   description: Bart becomes the shame of Springfield after a bungle on the playing
     field causes the Isotots to lose a pennant game; Homer and Marge fight Reverend
     Lovejoy and his wife over possession of Homer's mattress.
-  disneyplus_id:
+  disneyplus_id: 01978e70-0f9d-4779-ad24-0021c5dfb062
   simpsonsworld_id: 279798851587
   good: maybe
   characters:
@@ -198,7 +198,7 @@ episodes:
   episode: 19
   description: Homer and his friends join the volunteer fire department, only to begin
     stealing from fire victims.
-  disneyplus_id:
+  disneyplus_id: 45796141-0dfc-4591-84a0-4e60e2261165
   simpsonsworld_id: 310491203943
   good: maybe
   characters:
@@ -207,7 +207,7 @@ episodes:
   episode: 20
   description: When Santa's Little Helper gets a job on the police force, Bart buys
     a python to replace him.
-  disneyplus_id:
+  disneyplus_id: 5915e2fd-c3d0-41ca-a505-9fe2dfbcf891
   simpsonsworld_id: 302865987860
   good: maybe
   characters:
@@ -217,7 +217,7 @@ episodes:
   description: In this spoof of the television series '24,' Bart attempts to stop
     Jimbo, Dolph and Kearney before they unleash a deadly stink bomb at an upcoming
     school bake sale.
-  disneyplus_id:
+  disneyplus_id: 61602bd0-a1ab-4070-8bea-865b5a694998
   simpsonsworld_id: 292963907577
   good: maybe
   characters:
@@ -226,7 +226,7 @@ episodes:
   episode: 22
   description: Kent Brockman accidentally utters an obscenity during a news broadcast,
     leading to a heavy fine from the FCC - and costing Brockman his job.
-  disneyplus_id:
+  disneyplus_id: 74c57b86-7dfd-4d25-8008-46a91d898f3c
   simpsonsworld_id: 302859843984
   good: maybe
   characters:
