--- a/episodes/season_19.yml
+++ b/episodes/season_19.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Marge hires a life coach to turn Homer around after he becomes convinced
     he's nothing but a loser.
-  disneyplus_id:
+  disneyplus_id: cfb4a65d-9894-49a4-a3cd-8a69d5d2e27e
   simpsonsworld_id: 292943427892
   good: false
   characters:
@@ -15,7 +15,7 @@ episodes:
   episode: 2
   description: Homer becomes an opera star, only to find himself the target of an
     obsessed fan.
-  disneyplus_id:
+  disneyplus_id: 29d746b8-c00f-4017-a385-e7439147f115
   simpsonsworld_id: 350651459856
   good: false
   characters:
@@ -25,7 +25,7 @@ episodes:
   episode: 3
   description: Homer makes enemies when he starts his own tow truck business; Marge
     hires outside help to make Maggie more independent.
-  disneyplus_id:
+  disneyplus_id: 3aabd561-93f2-4cab-acdf-c2e8f4adc3f8
   simpsonsworld_id: 292968003585
   good: maybe
   characters:
@@ -37,7 +37,7 @@ episodes:
   episode: 4
   description: Marge fears for her safety after breaking a promise to a bank robber
     about visiting him in jail.
-  disneyplus_id:
+  disneyplus_id: f5ba0aac-38a1-41f2-a749-87292f0f6ec8
   simpsonsworld_id: 310455875747
   good: maybe
   characters:
@@ -48,7 +48,7 @@ episodes:
   description: 'In three tales of Halloween terror: Homer and Marge attempt to eliminate
     one another after discovering their secret identities; Bart and Lisa aid Kodos
     the space alien; Flanders uses the seven deadly sins to punish Bart.'
-  disneyplus_id:
+  disneyplus_id: e3918111-7db4-4a22-a335-fa3a24ec2545
   simpsonsworld_id: 302852163741
   good: false
   characters:
@@ -59,7 +59,7 @@ episodes:
   description: When his parents are lost at sea and presumed dead, Milhouse becomes
     cooler than Bart; Homer finds himself in hot water when he can't remember the
     color of Marge's eyes.
-  disneyplus_id:
+  disneyplus_id: 6904d6d9-3499-4cc5-a61f-91ad2d3805f7
   simpsonsworld_id: 302855747799
   good: maybe
   characters:
@@ -69,7 +69,7 @@ episodes:
   description: After Marge launches a gym for 'regular women' and becomes a successful
     businessperson, Homer decides to have his stomach stapled so she'll find him more
     attractive.
-  disneyplus_id:
+  disneyplus_id: 12049833-9d7d-4442-877c-5d2cb51d63e7
   simpsonsworld_id: 294772803561
   good: maybe
   characters:
@@ -79,7 +79,7 @@ episodes:
   description: After another of his attempts to kill the Simpsons is foiled, Sideshow
     Bob is put on trial.  During the proceedings, Bart accidentally kills his old
     nemesis.
-  disneyplus_id:
+  disneyplus_id: 63ecb9f3-2160-4fa4-a70a-e4b969f3a541
   simpsonsworld_id: 310458947589
   good: maybe
   characters:
@@ -89,7 +89,7 @@ episodes:
   description: Homer wakes up from a blackout only to discover that Marge and the
     kids have left him.  Using a variety of methods, he probes his memory to unravel
     the mystery.
-  disneyplus_id:
+  disneyplus_id: d0790333-bd60-4a6c-bc3a-f81924537052
   simpsonsworld_id: 302847555877
   good: maybe
   characters:
@@ -98,7 +98,7 @@ episodes:
   episode: 10
   description: 'When Springfield becomes the first city in the nation to hold a presidential
     primary, voters to turn the one person they can trust: Ralph Wiggum.'
-  disneyplus_id:
+  disneyplus_id: 04b3942a-b531-45e1-820c-c8b1447affd9
   simpsonsworld_id: 307179075535
   good: maybe
   characters:
@@ -107,7 +107,7 @@ episodes:
   episode: 11
   description: Marge and Homer recount how Marge almost fell in love with a college
     professor during the 1990s.
-  disneyplus_id:
+  disneyplus_id: 496a92e0-6d0f-4b93-874a-6466ceb46185
   simpsonsworld_id: 299664963588
   good: maybe
   characters:
@@ -117,7 +117,7 @@ episodes:
   description: 'When Homer and Marge become trapped in a tunnel of love, three Valentine''s
     Day stories unfold: Bonnie and Clyde steal each other''s hearts; a take-off on
     ''Lady and the Tramp''; punk rockers Lisa and Nelson are hooked on sweets.'
-  disneyplus_id:
+  disneyplus_id: cb1aece7-21a5-4ff0-93a1-be32ff6b6454
   simpsonsworld_id: 310471235766
   good: maybe
   characters:
@@ -126,7 +126,7 @@ episodes:
   episode: 13
   description: Bart befriends a new kid at school, unaware that he's a snitch; after
     his car is damaged in an accident, Homer ends up with a fancy loaner.
-  disneyplus_id:
+  disneyplus_id: 6ec0564f-066c-4db8-9c0b-525fb045760c
   simpsonsworld_id: 302849603730
   good: maybe
   characters:
@@ -135,7 +135,7 @@ episodes:
   episode: 14
   description: Bart and Lisa think they killed Martin Prince; Marge enlists the help
     of a reality TV show after Homer cheats on his diet.
-  disneyplus_id:
+  disneyplus_id: acde483e-f4e3-45f8-b751-cb9096b35221
   simpsonsworld_id: 302849091724
   good: maybe
   characters:
@@ -144,7 +144,7 @@ episodes:
   episode: 15
   description: Lisa becomes addicted to secondhand smoke when she joins a ballet academy;
     Homer befriends raccoons who stole his beef jerky.
-  disneyplus_id:
+  disneyplus_id: 811e0263-04e6-439d-b44d-b5e8ed1b40bd
   simpsonsworld_id: 310477379554
   good: maybe
   characters:
@@ -153,7 +153,7 @@ episodes:
   episode: 16
   description: Marge and Homer aid country singer Lurleen Lumpkin by reuniting her
     with her deadbeat father.
-  disneyplus_id:
+  disneyplus_id: 59529fea-4dd3-40fb-82ba-f6fac7ae816a
   simpsonsworld_id: 283768387739
   good: maybe
   characters:
@@ -162,7 +162,7 @@ episodes:
   episode: 17
   description: Bart is overjoyed when the calf he's raising is judged Best in Show
     - until he realizes the animal is going to be slaughtered.
-  disneyplus_id:
+  disneyplus_id: 1a63a3b9-4b72-4e3f-80d8-bf00d962ab72
   simpsonsworld_id: 302847555768
   good: maybe
   characters:
@@ -172,7 +172,7 @@ episodes:
   description: Lisa's documentary about life with the Simpsons is accepted into Sundance,
     but Lisa's initial elation turns to horror when festival-goers begin humiliating
     her dysfunctional family.
-  disneyplus_id:
+  disneyplus_id: 160f68fb-5e93-4905-8721-fdb30ac750ab
   simpsonsworld_id: 283769923976
   good: maybe
   characters:
@@ -181,7 +181,7 @@ episodes:
   episode: 19
   description: When Homer's mother returns to Springfield, she asks Homer for his
     forgiveness.
-  disneyplus_id:
+  disneyplus_id: 6b46ca89-e6d0-43d8-8e18-cab6a8c392b4
   simpsonsworld_id: 299670083511
   good: maybe
   characters:
@@ -191,7 +191,7 @@ episodes:
   description: Krusty hires Lisa to be his intern, but she's so good at the job, she
     ends up replacing him as host of his show; Bart and Homer discover the world of
     coin collecting.
-  disneyplus_id:
+  disneyplus_id: 1ac6f2b6-a083-4be3-aa46-9d5e185c1451
   simpsonsworld_id: 294774851723
   good: maybe
   characters:
