add d+ ids for season 20

--- a/episodes/season_20.yml
+++ b/episodes/season_20.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Homer and Flanders team-up as bounty hunters; Marge makes confections
     for an erotic bakery.
-  disneyplus_id:
+  disneyplus_id: b41e3be6-a769-407d-a3fc-a277e56801f3
   simpsonsworld_id: 311088195682
   good: true
   characters:
@@ -18,7 +18,7 @@ episodes:
   description: When Bart steals actor Denis Leary's cell phone, Marge uses its built-in
     GPS signal to track her son... leading the family to the ancient ruins of Machu
     Picchu.
-  disneyplus_id:
+  disneyplus_id: 342c9998-d824-4e01-9a5b-9b6db32bf258
   simpsonsworld_id: 304458307742
   good: false
   characters:
@@ -29,7 +29,7 @@ episodes:
   episode: 3
   description: Bart swaps places with his exact double-unaware that the double's wealthy
     siblings are plotting murder.
-  disneyplus_id:
+  disneyplus_id: 37918594-db18-449e-a6cc-d82abf914a4b
   simpsonsworld_id: 304460355919
   good: maybe
   characters:
@@ -39,7 +39,7 @@ episodes:
   description: On Halloween... Transformer-like robots duke it out in Springfield;
     Homer kills off celebrities so their likenesses can be exploited; the Simpsons
     appear in a spoof of a 'Peanuts' Halloween special.
-  disneyplus_id:
+  disneyplus_id: d2d09518-7a45-4fb6-882a-a97051fe2e27
   simpsonsworld_id: 691895363987
   good: false
   characters:
@@ -50,7 +50,7 @@ episodes:
   description: In a series of flashbacks... Homer and Marge end up in a cabin in the
     woods with newlyweds Flanders and Maude; Homer and Marge's marriage is nearly
     ruined when they meet exciting new people during a party.
-  disneyplus_id:
+  disneyplus_id: 9c79d330-2b3d-48d8-adb8-ee9781e48fb4
   simpsonsworld_id: 311675459549
   good: maybe
   characters:
@@ -59,7 +59,7 @@ episodes:
   episode: 6
   description: When Lisa discovers a talent for solving crossword puzzles, she enters
     a crossword tournament-unaware that Homer bet against her.
-  disneyplus_id:
+  disneyplus_id: 52d5c4bb-bc9c-4463-862a-2b241726510f
   simpsonsworld_id: 310541891517
   good: false
   characters:
@@ -70,7 +70,7 @@ episodes:
   episode: 7
   description: Homer thinks Bart's new Muslim friend belongs to a family of terrorists;
     Lisa acquires her first iPod-like device.
-  disneyplus_id:
+  disneyplus_id: 04436cd4-2791-45a4-b513-1e436dcec79b
   simpsonsworld_id: 310498883779
   good: maybe
   characters:
@@ -79,7 +79,7 @@ episodes:
   episode: 8
   description: As Lisa tries to find a habitat for endangered bees, Mr. Burns builds
     a state-of-the-art sports arena-which happens to look like a giant hive.
-  disneyplus_id:
+  disneyplus_id: eff7ae0c-3a24-4a1d-af82-ca8771821789
   simpsonsworld_id: 310506051725
   good: true
   characters:
@@ -90,7 +90,7 @@ episodes:
   episode: 9
   description: Lisa's new best friend creates a fantasy world so real it threatens
     to drive them apart.
-  disneyplus_id:
+  disneyplus_id: 68ee0aa3-11db-4692-9bca-d8f8601c3a5a
   simpsonsworld_id: 292944963870
   good: maybe
   characters:
@@ -100,7 +100,7 @@ episodes:
   description: When Homer discovers that he was almost elected class president in
     high school, an old Italian cook uses a magic pot of tomato sauce to show him
     an alternate version of his life.
-  disneyplus_id:
+  disneyplus_id: 1274848a-af0a-4883-866f-4cb68b0e503d
   simpsonsworld_id: 273728067781
   good: maybe
   characters:
@@ -110,7 +110,7 @@ episodes:
   description: Lisa freezes during a federal school assessment test; Homer tries to
     prevent accidents from happening after he forgets to pay an insurance bill; Skinner
     accompanies Bart and other underachievers on a trip to Capital City.
-  disneyplus_id:
+  disneyplus_id: 67652d71-984c-4ae6-a681-039dc438e679
   simpsonsworld_id: 277134915702
   good: maybe
   characters:
@@ -120,7 +120,7 @@ episodes:
   description: When Homer and Marge's adjustable mortgage rate skyrockets, they're
     forced to move out of the house... until Flanders purchases the property and becomes
     their landlord.
-  disneyplus_id:
+  disneyplus_id: 7b36dd78-924e-40ee-8be2-ce89a6b40964
   simpsonsworld_id: 273029699673
   good: maybe
   characters:
@@ -129,7 +129,7 @@ episodes:
   episode: 13
   description: In this 'National Treasure'-like story... when Maggie disappears at
     a convent, Lisa goes undercover as a nun to solve a mystery involving a rare jewel.
-  disneyplus_id:
+  disneyplus_id: 7142d0eb-2815-4108-b9d6-af8624dc2ab1
   simpsonsworld_id: 273030211958
   good: maybe
   characters:
@@ -138,7 +138,7 @@ episodes:
   episode: 14
   description: The Simpsons travel to Ireland, where Homer and Grampa purchase an
     old pub that's fallen on hard times.
-  disneyplus_id:
+  disneyplus_id: 788f0f9a-99a6-44a5-b575-b65feeee9152
   simpsonsworld_id: 307849283838
   good: maybe
   characters:
@@ -148,7 +148,7 @@ episodes:
   description: When their marriage license turns out to be invalid, Homer asks Marge
     to marry him in style.  But when Homer mysteriously disappears just before the
     wedding, Bart and Lisa search for answers.
-  disneyplus_id:
+  disneyplus_id: 8de216fa-ab27-4068-abba-7b3d64888854
   simpsonsworld_id: 273024579646
   good: maybe
   characters:
@@ -157,7 +157,7 @@ episodes:
   episode: 16
   description: Moe meets a beautiful woman in an Internet chat room who turns out
     to be three feet tall; Homer tries to spend more time with Maggie.
-  disneyplus_id:
+  disneyplus_id: 5c605010-e2c7-442f-afc8-2ef9e6845e94
   simpsonsworld_id: 273066051746
   good: maybe
   characters:
@@ -167,7 +167,7 @@ episodes:
   description: Bart dumps Milhouse in favor of a cute girl who volunteers her time
     at the retirement home; Lisa is prescribed antidepressants after she reads predictions
     about what Springfield will look like in 50 years.
-  disneyplus_id:
+  disneyplus_id: ba710d3f-9c05-4213-9311-ea4d6ae60d7c
   simpsonsworld_id: 273057347598
   good: maybe
   characters:
@@ -177,7 +177,7 @@ episodes:
   description: As a result of Homer's "helicopter parenting," Lisa employs a trendy
     technique for boosting her popularity, while Bart enters a balsa-wood model-building
     contest; Marge discovers a sauna in the basement.
-  disneyplus_id:
+  disneyplus_id: d4a21611-7e67-480d-940d-3291933e8328
   simpsonsworld_id: 273070659848
   good: maybe
   characters:
@@ -186,7 +186,7 @@ episodes:
   episode: 19
   description: Homer and Marge rent an apartment in tony Waverly Hills so Bart and
     Lisa can attend a better elementary school.
-  disneyplus_id:
+  disneyplus_id: 236d3723-c091-4c65-9147-fd39dd2183bb
   simpsonsworld_id: 299732035764
   good: maybe
   characters:
@@ -195,7 +195,7 @@ episodes:
   episode: 20
   description: 'As Marge and Lisa have their nails done, they spin four tales involving
     famous women: Queen Elizabeth, Snow White, Lady Macbeth and Ayn Rand.'
-  disneyplus_id:
+  disneyplus_id: 1cf52f6d-4c3e-45d1-81d0-294bb257f1c8
   simpsonsworld_id: 273732163923
   good: maybe
   characters:
@@ -204,7 +204,7 @@ episodes:
   episode: 21
   description: Springfield grapples with an immigration problem when the economy of
     nearby Ogdenville collapses.
-  disneyplus_id:
+  disneyplus_id: 527aec32-aac9-47c3-ac7e-72509b9a9fe7
   simpsonsworld_id: 729848899646
   good: maybe
   characters:
