--- a/episodes/season_27.yml
+++ b/episodes/season_27.yml
@@ -6,7 +6,7 @@ episodes:
   description: Marge decides it's finally time to separate from Homer, and quickly
     moves on with her life. Homer is initially devastated, but soon stumbles into
     a romance with a younger woman.
-  disneyplus_id:
+  disneyplus_id: bdffb99b-731e-4739-a599-2e6fa30e78c7
   simpsonsworld_id: 770426947744
   good: false
   characters:
@@ -17,7 +17,7 @@ episodes:
   episode: 2
   description: A celebrity television chef challenges Homer to a barbecue cook-off.
     But before the competition, Homer's new, prized barbecue grill is stolen.
-  disneyplus_id:
+  disneyplus_id: b852e4d5-f1d0-4952-b7a7-adca126e73cc
   simpsonsworld_id: 770595395906
   good: false
   characters:
@@ -30,7 +30,7 @@ episodes:
   description: Patty and Selma try to quit smoking, but Patty moves in with the Simpsons
     when Selma takes it up again. Meanwhile, Maggie goes on an adventure with some
     local creatures.
-  disneyplus_id:
+  disneyplus_id: 66f45b14-fc1b-45a9-a420-a8379f61256d
   simpsonsworld_id: 772103747997
   good: maybe
   characters:
@@ -43,7 +43,7 @@ episodes:
   description: The Simpsons are proud to be the most festively decorated house on
     the block. But when Lisa is traumatized at Krustyland Horror Night, she feels
     she cannot handle Halloween anymore.
-  disneyplus_id:
+  disneyplus_id: d3c6cf35-7f8e-4040-b356-c056b02a44d1
   simpsonsworld_id: 770425923947
   good: maybe
   characters:
@@ -53,7 +53,7 @@ episodes:
   description: After killing Bart, Sideshow Bob doesn't know what to do with himself;
     Homer wakes up with short-term memory loss; Because of radiation, Lisa, Bart and
     Milhouse gain super-powers.
-  disneyplus_id:
+  disneyplus_id: ba22557a-4e1f-44da-a88b-08f68746071d
   simpsonsworld_id: 770433091920
   good: maybe
   characters:
@@ -64,7 +64,7 @@ episodes:
   description: Lisa makes a new friend at school - Harper, who happens to be super-rich,
     while Homer makes friends with Harper's dad and sets out to continue living the
     good life when Lisa decides to end the friendship.
-  disneyplus_id:
+  disneyplus_id: 3dfbf8a3-1234-4745-b3d4-a248f2e00847
   simpsonsworld_id: 770437187884
   good: maybe
   characters:
@@ -73,7 +73,7 @@ episodes:
   episode: 7
   description: Broadway legend Laney Fontaine transforms Lisa into a show-biz kid
     after Homer loses her chance at band camp.
-  disneyplus_id:
+  disneyplus_id: 9d522c72-2956-45f6-b114-9f06861d3c33
   simpsonsworld_id: 770417219938
   good: maybe
   characters:
@@ -82,7 +82,7 @@ episodes:
   episode: 8
   description: Lisa tries to restore the reputation of a forgotten Springfield female
     inventor, while Bart takes full advantage of a diagnosis that he is a sociopath.
-  disneyplus_id:
+  disneyplus_id: 30657536-4a9f-4bcc-8837-f0789b3d6203
   simpsonsworld_id: 770422339536
   good: maybe
   characters:
@@ -92,7 +92,7 @@ episodes:
   description: A tale of Bart's journey from youth to adulthood, where he is constantly
     in search of approval from his father and in the shadow of his more-successful
     younger sister.
-  disneyplus_id:
+  disneyplus_id: 432589cf-7d5b-4a7c-871a-1ab04ce07214
   simpsonsworld_id: 1071531075851
   good: maybe
   characters:
@@ -102,7 +102,7 @@ episodes:
   description: When Homer loses his job due to Marge's social media post, he begins
     working as a dishwasher at a Greek restaurant. Meanwhile, Lisa creates an app
     that can predict the effect any post on social media will have.
-  disneyplus_id:
+  disneyplus_id: a5caaa61-6385-4a32-9505-a0397bcab8fc
   simpsonsworld_id: 770434627559
   good: maybe
   characters:
@@ -112,7 +112,7 @@ episodes:
   description: Bart and Principal Skinner battle over the affection of Bart's new
     teacher, and a new milk-based product that Homer buys from the Kwik-E-Mart causes
     big changes in Bart and Lisa.
-  disneyplus_id:
+  disneyplus_id: 954a8498-a8ea-404a-a369-9d8e4563ae17
   simpsonsworld_id: 770430019813
   good: maybe
   characters:
@@ -122,7 +122,7 @@ episodes:
   description: Apu's nephew makes big changes when he takes over the Kwik-E-Mart business,
     and Bart decides that he's through with being bad after his latest prank spirals
     out of control.
-  disneyplus_id:
+  disneyplus_id: 20393360-8218-4864-be40-bdc2720cb6a4
   simpsonsworld_id: 770449475567
   good: maybe
   characters:
@@ -132,7 +132,7 @@ episodes:
   description: Professor Frink's new invention turns him into a ladies' man, while
     a new pill at the Springfield Retirement Castle causes Grandpa to hallucinate
     back to his happiest moments.
-  disneyplus_id:
+  disneyplus_id: 4d973140-20bc-409c-b062-0d4a3bd5ba0c
   simpsonsworld_id: 770439747712
   good: maybe
   characters:
@@ -142,7 +142,7 @@ episodes:
   description: Lisa tries to launch the career of a homeless Appalachian folk singer,
     but Bart warns her that she will just let her down. Meanwhile, Homer tries to
     rescue the cat, who is trapped in the walls of the house.
-  disneyplus_id:
+  disneyplus_id: 2a2dd9e3-30e0-418f-963a-868b5255e2c3
   simpsonsworld_id: 770451523845
   good: maybe
   characters:
@@ -152,7 +152,7 @@ episodes:
   description: Lisa takes a job as veterinarian's assistant, but soon lets the responsibilities
     of the job get to her head. Meanwhile, Marge decides to take a job as a crime
     scene cleaner.
-  disneyplus_id:
+  disneyplus_id: ff2c31ca-f739-427f-bc4b-54ff06f3b743
   simpsonsworld_id: 770452547696
   good: maybe
   characters:
@@ -162,7 +162,7 @@ episodes:
   description: Lisa signs up for an opportunity to be part of a mission to colonize
     Mars in ten years, and Homer's strategy to use reverse psychology to talk her
     out of it backfires.
-  disneyplus_id:
+  disneyplus_id: bf490d6d-519f-407c-9f6a-ae7322534a49
   simpsonsworld_id: 770891331927
   good: maybe
   characters:
@@ -172,7 +172,7 @@ episodes:
   description: Homer tries to raise Smithers' spirits by finding him a man, and Lisa
     gets the lead in the school production of "Casablanca" alongside a new male student,
     sparking Millhouse's jealousy.
-  disneyplus_id:
+  disneyplus_id: eca78e82-0bbe-4bbf-b682-60e91b5cb8a5
   simpsonsworld_id: 770893891557
   good: maybe
   characters:
@@ -182,7 +182,7 @@ episodes:
   description: After Lisa overhears Marge say that she doesn't like Lisa's jazz music,
     Marge takes Lisa on a trip to Capitol City to regain her friendship. Meanwhile,
     Bart uses Maggie as his new partner in crime for his practical jokes.
-  disneyplus_id:
+  disneyplus_id: 03e357d5-7658-4c29-b5ae-e3bc2739e4ff
   simpsonsworld_id: 770893891750
   good: maybe
   characters:
@@ -191,7 +191,7 @@ episodes:
   episode: 19
   description: Maggie will not go to sleep, so Homer tells her a bedtime story about
     when the Simpsons and the Flanders went together to the Grand Canyon.
-  disneyplus_id:
+  disneyplus_id: b9dc9ea5-988b-4276-ae71-da9e2bdf0431
   simpsonsworld_id: 1071851075844
   good: maybe
   characters:
@@ -201,7 +201,7 @@ episodes:
   description: After promising Marge the trip of a lifetime, Homer makes a deal with
     a travel agent to be a courier of a top-secret briefcase in exchange for a discounted
     family vacation to Paris.
-  disneyplus_id:
+  disneyplus_id: 64fc4774-bf5a-42f8-a5cb-8e52423f22d8
   simpsonsworld_id: 772102211921
   good: maybe
   characters:
@@ -211,7 +211,7 @@ episodes:
   description: While trying to overcome a fear of public speaking, Homer creates an
     improv comedy troupe. Meanwhile, Marge rebuilds Bart's treehouse, but gets no
     thanks from him. Homer later appears live to answer phoned in questions.
-  disneyplus_id:
+  disneyplus_id: c93809a1-f8cd-4941-a268-4b688b6bee15
   simpsonsworld_id: 770892355976
   good: maybe
   characters:
@@ -220,7 +220,7 @@ episodes:
   episode: 22
   description: Marge lets Bart go to the park alone because he's too irritating, then
     she ends up getting arrested for leaving him unsupervised.
-  disneyplus_id:
+  disneyplus_id: f4578a6f-2a92-4e49-82a4-1a37789ddbfd
   simpsonsworld_id: 772111939897
   good: maybe
   characters:
